--- a/index.html
+++ b/index.html
@@ -236,23 +236,25 @@ The only way to train the inverse dynamics model is supervised learning from age
 
   </p>
 
-<!-- <div class="container">
-  <iframe
-    src="https://www.youtube.com/embed/Xl_r28qDUEg"
-    srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/rdF7q8MipRs?autoplay=1><img src='images/youtube_mbpo.webp' alt='MBPO video'></a>"
-    frameborder="0"
-    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen
-    loading="lazy"
-    title="MBPO video"
-  ></iframe>
-</div>
+<b>A demo video showing the multi-step planned states by the state planner.</b>
 
-<p>
-  If you cannot access YouTube, please <a href="images/mbpo_icml_2019.mp4">download our video here</a>.
-</p>
-<br> -->
-<center></center>
+  <div class="container">
+    <iframe
+      src="https://www.youtube.com/embed/WahVjjvcYYM"
+      srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/WahVjjvcYYM?autoplay=1><img src='images/youtube_depo.webp' alt='DePO video'></a>"
+      frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+      loading="lazy"
+      title="DePO video"
+    ></iframe>
+  </div>
+  
+  <p>
+    If you cannot access YouTube, please <a href="images/depo-video.mp4">download our video here</a>.
+  </p>
+  <br>
+  
 </center>
 
 <br>
